DfsBlockCacheConfig: update stream.toList to collect(toList)
This change updates usage of stream's list collector to support older
java jdk versions.

Change-Id: Ia066d36aef8ab166efd837d5f6f01e5d1fdd3cb7